--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>My Website</title>
+    <link rel="shortcut icon" href="assets\logo.png" type="image/png" sizes="16*16">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="bootstrap\bootstrap.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
-    <script src="bootstrap\bootstrap.js"></script>
-    <script src="bootstrap\bootstrap\j.query.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+    <script> src="https://code.jquery.com/jquery-3.3.1.slim.min.js"</script>
+    <script src= "https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -19,15 +23,15 @@
             <a class="navbar-brand" href="#"><img src="assets\logo.png" width="150" height="70px"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <i class="fas fa-bars"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <div class="navbar-nav ml-auto">
-                    <a class="nav-item nav-link" href="#">HOME</a>
-                    <a class="nav-item nav-link" href="#services">SERVICES</a>
-                    <a class="nav-item nav-link" href="#us">ABOUT US</a>
-                    <a class="nav-item nav-link" href="#review">TESTIMONIAL</a>
-                    <a class="nav-item nav-link" href="#contact">CONTACT US</a>
+                    <a class="hover" href="#">HOME</a>
+                    <a class=" hover" href="#services">SERVICES</a>
+                    <a class=" hover" href="#us">ABOUT US</a>
+                    <a class="hover" href="#review">TESTIMONIAL</a>
+                    <a class=" hover" href="#contact">CONTACT US</a>
                 </div>
             </div>
         </nav>
@@ -58,7 +62,7 @@
             <div class="row">
 
                 <div class="col-md-6">
-                    <img src="assets\services.jpg" alt="" class="img1">
+                    <img src="assets\services.jpg" alt=""  class="img1">
                     <p>
                         I have experiance in making powersull website i can develop websites for you
                         and also powerfull reponsive websites with html, css,
@@ -75,7 +79,7 @@
                         of microsoft store with less and less use of mobile space </p>
                 </div>
             </div>
-            <button type="button" class="btn btn-primary"> All Services</button>
+            <button type="button" class="btn btn-primary btn-primary-Adj"> All Services</button>
         </div>
     </section>
     <!--------------------------------------------About Us------------------------------------------------->
@@ -149,9 +153,9 @@
                     <h2 class="contact">Contact Us</h2>
                     <ul class="list">
                         <br />
-                        <li><i class="fa fa-map-marker" aria-hidden="true"></i> Finance trade center, Karachi</li>
-                        <li class="email"><i class="fas fa-envelope "></i> <a href="mailto:Zahidabdulrafay@gmail.com"> Zahidabdulrafay@gmail.com</a></li>
-                        <li><i class="fas fa-phone"></i> 0335-2725958</li>
+                        <li><i class="botm fa fa-map-marker" aria-hidden="true"></i> Finance trade center, Karachi</li>
+                        <li class="email"><i class=" botm fas fa-envelope "></i> <a href="mailto:Zahidabdulrafay@gmail.com"> Zahidabdulrafay@gmail.com</a></li>
+                        <li><i class=" botm fas fa-phone"></i> 0335-2725958</li>
                     </ul>
                 </div>
             </div>
@@ -161,7 +165,7 @@
     </section>
 </body>
 <!------------------------------copyright---------------------------------------->
-<script src="bootstrap\smooth-scroll.js">   
+<script src="Smooth-Scroll\smooth-scroll.js">   
 </script>
 <script>
 var scroll = new SmoothScroll('a[href*="#"]');
