--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     </section>
 </body>
 <!------------------------------copyright---------------------------------------->
-<script src="bootstrap\smooth-scroll.js">   
+<script src="Bootstrap\smooth-scroll.js">   
 </script>
 <script>
 var scroll = new SmoothScroll('a[href*="#"]');
