--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <section id="nav-bar">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#"><img src="assets\logo.png" width="150" height="70px"></a>
+            <a class="navbar-brand" href="#"><img src="Assets\logo.png" width="150" height="70px"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
@@ -49,11 +49,11 @@
                     </p>
                 </div>
                 <div class="col-md-6">
-                    <img src="assets\programmer.png" alt="" class="img-fluid">
+                    <img src="Assets\programmer.png" alt="" class="img-fluid">
                 </div>
             </div>
         </div>
-        <img src="assets\waves.png" alt="" class="bottom-image img" width="100%">
+        <img src="Assets\waves.png" alt="" class="bottom-image img" width="100%">
     </section>
     <!-----------------------------------------services------------------------------------------->
     <section class="services" id="services">
@@ -62,7 +62,7 @@
             <div class="row">
 
                 <div class="col-md-6">
-                    <img src="assets\services.jpg" alt=""  class="img1">
+                    <img src="Assets\services.jpg" alt=""  class="img1">
                     <p>
                         I have experiance in making powersull website i can develop websites for you
                         and also powerfull reponsive websites with html, css,
@@ -71,7 +71,7 @@
                     </p>
                 </div>
                 <div class="col-md-6">
-                    <img src="assets\services reso.jpg" alt="" class="img2">
+                    <img src="Assets\services reso.jpg" alt="" class="img2">
                     <p>I have also expertise in making website application or progressive web app
                         with react by which user experiance a seamless and realtime experiance like
                         desktop base of mobile base application and also install it in there
@@ -110,7 +110,7 @@
                         Website was fantastic, your skills are amazing i will not change my opinion
                         after i go to my country
                     </p>
-                    <img src="assets\abhi.jpg" alt="">
+                    <img src="Assets\abhi.jpg" alt="">
                     <p class="comment"> <b>Fonder for fantastic tea</b> </br> CEO MG21.</p>
                 </div>
                 <div class="col-md-4 review2">
@@ -118,7 +118,7 @@
                         Kaisa diya!! wonderfull website building skills you have what the the website
                         website looks attractive.
                     </p>
-                    <img src="assets\amir.jpg" alt="">
+                    <img src="Assets\amir.jpg" alt="">
                     <p class="comment"> <b>Fonder for fake</b> <br /> CEO Baghairatti.</p>
                 </div>
             </div>
@@ -129,10 +129,10 @@
         <div class="container text-center social-1">
             <h1 class="title">Social Media</h1>
             <div class="icon">
-                <a href="https://www.facebook.com/" target="1"><img src="assets/icons8-facebook-512.png"></a>
-                <a href=""><img src="assets/linkedin.png"></a>
-                <a href=""><img src="assets/twitter.png"></a>
-                <a href="https://github.com/Abdulrafayzahid" target="1"><img src="assets/GitHub-Mark-32px.png"></a>
+                <a href="https://www.facebook.com/" target="1"><img src="Assets/icons8-facebook-512.png"></a>
+                <a href=""><img src="Assets/linkedin.png"></a>
+                <a href=""><img src="Assets/twitter.png"></a>
+                <a href="https://github.com/Abdulrafayzahid" target="1"><img src="Assets/GitHub-Mark-32px.png"></a>
             </div>
         </div>
     </section>
@@ -141,7 +141,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="assets\logo.png" width="150" height="70px">
+                    <img src="Assets\logo.png" width="150" height="70px">
                     <p>
                         You can contact to us and discuss about your plan, expectation,
                         ideas and question about the project and ask us freely about
