--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
                 </div>
                 <div class="col-md-4 review2">
                     <p>
-                        Kaisa diya!! wonderfull website building skills you have what the the website
+                        Wonderfull website building skills you have what the the website
                         website looks attractive.
                     </p>
                     <img src="Assets\amir.jpg" alt="">
-                    <p class="comment"> <b>Fonder for fake</b> <br /> CEO Baghairatti.</p>
+                    <p class="comment"> <b>Fonder of bol</b> <br /> CEO Bol.</p>
                 </div>
             </div>
         </div>
